@@ -1,5 +1,5 @@
 displayName = TWAILA
 author = Jadams
-version = 0.4.0.3
+version = 0.4.0.4
 homepage = https://forums.terraria.org/index.php?threads/twaila-mod.111090/
 side = Client
