@@ -1,2 +1,3 @@
 ﻿
-- Fixed a crash from bad tile types
+- Fixed a crash from certain unloaded tiles
+- Fixed multiple incorrect localization keys
